AvalancheBulletinStatusService: no HttpResponse